[package]
name = "ring-worker-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.80" }

[dependencies.ring]
git = "https://github.com/oliverdunk/ring.git"
branch = "service-worker-scope"
default-features = false
features = ["wasm32_unknown_unknown_js"]
